--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>monitor-app</title>
+    <title>monitor-app</title><meta content="width=device-width,initial-scale=1" name=viewport>
     <script type="text/javascript" src="http://smoothiecharts.org/smoothie.js"></script>
   </head>
   <body>
